--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "react": "^18.2.0",
